--- a/WordPuzzleScorer.UI/Views/Shared/_Layout.cshtml
+++ b/WordPuzzleScorer.UI/Views/Shared/_Layout.cshtml
@@ -6,6 +6,10 @@
     <title>Word Puzzle Scorer</title>
     @Styles.Render("~/Content/css")
     @Scripts.Render("~/bundles/modernizr")
+    <script src="~/Scripts/knockout-3.4.0.js"></script>
+    <script src="~/Scripts/jquery-1.10.2.js"></script>
+    <script src="~/Scripts/jquery-ui-1.11.4.js"></script>
+    <script src="https://cdn.jsdelivr.net/lodash/4.7.0/lodash.min.js"></script>
     @RenderSection("head", required: false)
 </head>
 <body>
