--- a/WordPuzzleScorer.UI/Views/Shared/_Layout.cshtml
+++ b/WordPuzzleScorer.UI/Views/Shared/_Layout.cshtml
@@ -9,7 +9,9 @@
     <script src="~/Scripts/knockout-3.4.0.js"></script>
     <script src="~/Scripts/jquery-1.10.2.js"></script>
     <script src="~/Scripts/jquery-ui-1.11.4.js"></script>
-    <script src="https://cdn.jsdelivr.net/lodash/4.7.0/lodash.min.js"></script>
+    <script src="https://cdn.jsdelivr.net/lodash/4.12.0/lodash.min.js"></script>
+    <script src="~/Scripts/puzzleviewmodel.js"></script>
+    <script src="~/Scripts/wordpuzzleui.js"></script>
     @RenderSection("head", required: false)
 </head>
 <body>
